<resources>
    <string name="app_name">Namaste-Yoga</string>
    <string name="use_current_loc">Use my current location</string>
    <string name="yoga_centers">Yoga Centres</string>
    <string name="yoga_trainers">Yoga Trainers</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="trainer_as">Trainer As</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="center_name">Centre Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="rest_passwrd_text">Enter the OTP below and reset your password</string>
    <string name="enterOTP">OTP</string>
    <string name="dont_recv_otp">Didn\'t receive the OTP?</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="yoga_events">Event List</string>
    <string name="no_events">Unfortunately there is no EVENTS in your city right now.</string>
    <string name="no_events_notify">Tap on the notify button if you want to be notified as any yoga event are added in your city.</string>
    <string name="no_trainers">Unfortunately there is no TRAINERS in your city right now.</string>
    <string name="no_trainers_notify">Tap on the notify button if you want to be notified as any yoga trainer are added in your city.</string>
    <string name="no_centers">Unfortunately there is no CENTRES in your city right now.</string>
    <string name="no_centers_notify">Tap on the notify button if you want to be notified as any yoga centre are added in your city.</string>
    <string name="notify_me">NOTIFY ME</string>
    <string name="enter_detail">Enter your details</string>
    <string name="phone_number">Phone Number</string>
    <string name="search_city">Search by city</string>
    <string name="full_name">Full Name</string>
    <string name="feedback">Feedback</string>
    <string name="search_center">search by center name</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="event_start_date_time">Event Start Date</string>
    <string name="event_end_date_time">Event End Date</string>
    <string name="free">Free</string>
    <string name="ishiglight">Highlight</string>
    <string name="description">Description</string>
    <string name="description_max">Description Max. 1000 characters</string>
    <string name="contact_required">Please enter contact number</string>
    <string name="email_is_not_valid">Invalid email</string>
    <string name="logout">Logout</string>
    <string name="cant_be_blank">Cannot be blank</string>
    <string name="select_city">Please select your city</string>
    <string name="selectCity">Select City</string>
    <string name="chooseCity">Choose City</string>
    <string name="type_city">Type city name</string>
    <string name="it_is_mandatory_to_update_the_app">A newer version of the app is now available. Please update to proceed.</string>
    <string name="update_required">Update required</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="eventsecondtext">Tap on the notify button and we’ll notify you as soon as a event gets listed in your city.</string>
    <string name="eventMiddleText">No event is seen listed from your city at present.</string>
    <string name="no_internet">No internet</string>
    <string name="please_check_internet">Please check your Internet Connection!</string>
    <string name="ok">Ok</string>
    <string name="iagree">I AGREE</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">The contents of this app are provided for the information of your app users. It is requested to verify the authenticity of the information independently, wherever felt necessary.</string>
    <string name="_successfully">Successfully</string>
    <string name="type_center">Type center name</string>
    <string name="type_trainer">Type trainer name</string>
    <string name="type_event">Type event name</string>
    <string name="are_you_sure_you_want_to_add">Are you sure you want to add this event to the calendar?</string>
    <string name="alert">Alert</string>
    <string name="my_events">My Events</string>
    <string name="change_password">Change Password</string>
    <string name="my_accounts">My Account</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_account">Edit Account</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="number_strts_with_zero">Can\'t starts with zero</string>
    <string name="password_should_be_8_15_characters_with_at_least_1_nummeric">Password must contain at least 8–15 characters, including UPPER/LOWERCASE, special symbols and numbers</string>
    <string name="do_u_like_this_event">Do you like this event?</string>
    <string name="give_us_rate">Give us a quick rate to know how much you like this event.</string>
    <string name="current_city">Current City</string>
    <string name="nearest_city">Nearby City</string>
    <string name="current_city_text">If you are located in a city then select the current city option.</string>
    <string name="nearest_city_text">If you are *not* located in a city then select the nearest city option.</string>
    <string name="current_event_city_text">If your event is being held in a city then select the current city option.</string>
    <string name="nearest_event_city_text">If your event is *not* being held in a city then select the nearby city option.</string>
    <string name="current_events">Current</string>
    <string name="upcoming_events">Upcoming</string>
    <string name="past_events">Past</string>
    <string name="private_trainer">Private Trainer</string>
    <string name="public_trainer">Public Trainer</string>
    <string name="govt_trainer">Government Trainer</string>
    <string name="select_type">Select Type</string>
    <string name="after_otp">Your registration details have been sent to the administrator for approval. Once approved, your listing will be visible on the Namaste Yoga app.</string>
    <string name="trainer">Trainer</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="s_name">%s Name</string>
    <string name="centre">Centre</string>
    <string name="full">Full</string>
    <string name="centre_name">Centre Name</string>
    <string name="guest">Guest</string>
    <string name="guest_name">Full Name</string>
    <string name="_private">Private</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="_public">Public</string>
    <string name="_govt">Govt</string>
    <string name="certificate_number">Certificate Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sitting_capacity">Seating Capacity</string>
    <string name="please_enter_ycb_certificate_number">Please enter YCB certificate number</string>
    <string name="password_should_be_3_15_characters_with_at_least_1_nummeric">Certificate must contain at least 3–15 characters, including charaters and numbers</string>
    <string name="suspend_account">Suspend Account</string>
    <string name="terms_and_conditions_text">terms of use.</string>
    <string name="terms_and_conditions">Terms and Use</string>
    <string name="terms_and_conditions_msg">Please agree to the terms &amp; use</string>
    <string name="yes_i_agree_to_the">Yes, I agree to the</string>
    <string name="onBackPressed">onBackPressed</string>
    <string name="onCreate">onCreate</string>
    <string name="loading">Loading…</string>
    <string name="default_notification_channel_id">push_notification_namaste_yoga</string>
    <string name="connection_is_required">Connection is required. Check your internet connection and try again</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="something_went_wrong">Something went wrong,Try again!</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="permission_msg">Please allow storage permission in App Settings for additional functionality.</string>
    <string name="permission_title">Permission Alert</string>
    <string name="fitness_activity">Fitness Activity</string>
    <string name="background">Background</string>
    <string name="steps">Steps</string>
    <string name="history">History</string>
    <string name="last_7_days_activities">Last 7 days activities</string>
    <string name="calories">Calories</string>
    <string name="_0">0</string>
    <string name="_0_cal">0 Cal</string>
    <string name="_d_cal">%d Cal</string>
    <string name="_0_km">0 Km</string>
    <string name="_s_km">%s Km</string>
    <string name="goal_setting">Goal Settings</string>
    <string name="graph_date_format" translatable="false">d MMM</string>
    <string name="history_title_date_format" translatable="false">MMMM, yyyy</string>
    <string name="history_item_date_format" translatable="false">dd MMM, yyyy</string>
    <string name="_0_steps">0 Steps</string>
    <string name="_d_steps">%d Steps</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="read_step_data">Read Step Data</string>
    <string name="n_a">N/A</string>
    <string name="empty" />
    <string name="trophy">Trophy</string>
    <string name="km">Km</string>
    <string name="no_record_found">No record found !</string>
    <string name="default_permission_msg_camera">The app requires some mandatory permissions. Please allow all the
        required permissions to enable smooth running of the app.
    </string>
    <string name="on_board_first_title">Find Yoga Trainers, Centres and events</string>
    <string name="on_board_first_msg">You can get details of yoga centres, yoga trainers and upcoming, current and past events details and will able to share to others.</string>
    <string name="choose_trainer_as">Choose Trainer As</string>
    <string name="government">Government</string>
    <string name="login_here">Login here</string>
    <string name="navigation">Navigation</string>
    <string name="yoga_asana">Yoga Video(s)</string>
    <string name="push_notification">Push Notification</string>
    <string name="health_fitness_activity">Health / Fitness Activity</string>
    <string name="quiz">Quiz</string>
    <string name="poll">Poll</string>
    <string name="social_media">Social Media</string>
    <string name="other_links">Other Links</string>
    <string name="linkinden">Linkinden</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="celebrity_testimonial">Celebrity Testimonial</string>
    <string name="share_app_title">Share Application</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>