<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    android:background="@color/white"
    tools:context=".ui.main.MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="3"
      android:id="@+id/header"
      android:layout_marginStart="@dimen/margin5x2"
      android:layout_marginEnd="@dimen/margin5x2"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="?attr/actionBarSize"
      android:paddingTop="@dimen/margin5x4">
      <Button
          android:layout_width="@dimen/zero"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/trainer"
          style="@style/Widget.AppCompat.Button"
          android:layout_marginStart="@dimen/margin5x2"
          android:layout_marginEnd="@dimen/margin5x1"
          android:layout_gravity="center"
          android:text="@string/yoga_trainers"
          android:textAllCaps="false"/>
      <Button
          android:layout_width="@dimen/zero"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          style="@style/Widget.AppCompat.Button"
          android:id="@+id/center"
          android:layout_marginStart="@dimen/margin5x1"
          android:layout_marginEnd="@dimen/margin5x1"
          android:layout_gravity="center"
          android:text="@string/yoga_centers"
          android:textAllCaps="false"/>
      <Button
          android:layout_width="@dimen/zero"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          style="@style/Widget.AppCompat.Button"
          android:id="@+id/event"
          android:layout_marginStart="@dimen/margin5x1"
          android:layout_marginEnd="@dimen/margin5x2"
          android:layout_gravity="center"
          android:text="@string/yoga_events"
          android:textAllCaps="false"/>
  </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/changePassword"
        android:text="@string/change_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/pushNotification"
        android:text="@string/push_notification"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/healthTracker"
        android:text="@string/fitness_activity"/>
</androidx.constraintlayout.widget.ConstraintLayout>