<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/two"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="false"
        android:id="@+id/bodyLayout"
        app:cardPreventCornerOverlap="false"
        android:layout_margin="@dimen/padding4x4"
        android:layout_marginBottom="@dimen/padding4x4"
        app:cardCornerRadius="@dimen/dimen3x2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_"
            android:text="@string/n_a"
            android:id="@+id/name"
            android:textSize="@dimen/text_sp16"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:paddingTop="@dimen/padding3x4"
            android:paddingBottom="@dimen/et_height_30"/>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="@dimen/one"
        android:layout_height="@dimen/one"
        app:layout_constraintTop_toBottomOf="@id/bodyLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/padding3x4"/>
    <View
        android:layout_width="@dimen/one"
        android:layout_height="@dimen/one"
        android:id="@+id/bottomLine"
        app:layout_constraintTop_toBottomOf="@id/bodyLayout"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation"
        android:elevation="15dp"
        android:orientation="horizontal"
        android:contentDescription="@string/navigation"
        app:layout_constraintTop_toTopOf="@id/bottomLine"
        app:layout_constraintBottom_toBottomOf="@id/bottomLine"
        app:layout_constraintEnd_toEndOf="@id/bodyLayout"
       >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/margin5x1"
            android:contentDescription="@string/facebook"
            android:layout_marginEnd="@dimen/margin5x2"
            android:src="@drawable/fb"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twitter"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/margin5x1"
            android:contentDescription="@string/twitter"
            android:layout_marginEnd="@dimen/margin5x2"
            android:src="@drawable/twitter"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linkden"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/margin5x1"
            android:layout_marginEnd="@dimen/margin5x2"
            android:contentDescription="@string/linkinden"
            android:src="@drawable/ic_instagram"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/youtubeClick"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/margin5x1"
            android:contentDescription="@string/other_links"
            android:layout_marginEnd="@dimen/margin5x3"
            android:src="@drawable/ic_youtube"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/others"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/margin5x1"
            android:contentDescription="@string/other_links"
            android:layout_marginEnd="@dimen/margin5x3"
            android:src="@drawable/ic_other"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>