<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/et_height_50"
        android:layout_marginEnd="@dimen/et_height_50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            android:layout_gravity="center"
            android:contentDescription="@string/description"
            android:src="@drawable/art1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heading"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="@dimen/text_sp18"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/et_height_50"
            android:fontFamily="@font/lato_black"
            android:text="@string/on_board_first_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtMsg"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/des_color"
            android:textSize="@dimen/text_sp14"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="@dimen/et_height_30"
            android:fontFamily="@font/lato"
            android:text="@string/on_board_first_msg"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>